# SAG-Mill-Degradation-Monitor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.cfg
.do/: app.yaml
.github/workflows/: ci.yml
SAG-Mill-Degradation-Monitor/: pyproject.toml
assets/: styles.css
config/: alerts.py  equipment.py  settings.py
docs/: analytics.md  architecture.md  cicd.md  data-flow.md  data-model.md  deployment.md  dev-workflow.md  equipment-modeling.md  index.md  troubleshooting.md
docs/troubleshooting/: 01-wsl-ntfs-symlink.md  02-python-no-pip.md  03-pip-permisos.md  04-docker-build.md  05-pantalla-en-blanco.md  06-ci-github-actions.md  07-compute-rul-floating-point.md  08-ruff-linting-errors.md  09-testwatch-comportamiento.md  10-docker-wsl.md  index.md
src/analytics/: anomaly.py  health_index.py  thresholds.py
src/callbacks/: alerts.py  equipment.py  navigation.py  trends.py
src/data/: degradation.py  models.py  simulator.py  store.py
src/i18n/: translator.py
src/i18n/locales/: en.json  es.json
src/layout/: main.py  navbar.py  sidebar.py
src/layout/components/: alert_badge.py  health_gauge.py  kpi_card.py
src/pages/: alerts.py  equipment.py  overview.py  trends.py
tests/: conftest.py  test_health_index.py  test_models.py  test_simulator.py  test_thresholds.py
