[tool.poetry]
name = "SAG-Mill-Degradation-Monitor"
version = "0.1.0"
description = "A project for monitoring degradation in SAG mills."
authors = ["Javier Arriagada <jarriagada4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2"
pandas = "^1.3"
numpy = "^1.21"

[tool.poetry.dev-dependencies]
flake8 = "^3.9"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"